--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -86,18 +86,228 @@
 // @import "node_modules/bootswatch/dist/yeti/bootswatch";
 
 
+/*  VARIABLES  */
+$color-main-blue: #0e1d38;
+$color-main-orange: #fa8f2d;
+$padding-sm: 5px;
+$padding-md: 10px;
+$padding-lg: 20px;
+
+
+/*-------------*/
+
+/* MIXINS */
+@mixin jumotronheight {
+  height: (100vw - (150px));
+}
+/*--------------*/
 // page-level layout
+
 
 .App {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  z-index: 5;
+
+  /*general overrides*/
+  a {
+    color: #fa8f2d;
+  }
 
   & > .pageContent {
     flex: 1;
     overflow: auto;
     padding-top: 10px;
+    padding-bottom: 50px;
   }
+  h1,h2,h3,h4,h5 {
+    font-weight: 400;
+  }
+  h1 {
+    border-left: 4px solid $color-main-orange;
+    padding-left: $padding-lg;
+  }
+  ul {
+    padding-left: 0;
+  }
+  li {
+    font-size: 1.2rem;
+    list-style: none;
+    border-left: 2px solid $color-main-orange;
+    padding-left: 5px;
+    margin-bottom: 15px;
+  }
+  /*-----------*/
+
+
+  /* spacing classes*/
+  .section-margin-top-lg {
+    margin-top: 200px;
+  }
+  .section-margin-top-md {
+    margin-top: 100px;
+  }
+  .section-margin-top-sm {
+    margin-top: 50px;
+  }
+  .section-padding-top-lg {
+    padding-top: 100px;
+  }
+  .section-padding-top-md {
+    padding-top: 50px;
+  }
+  .section-padding-top-sm {
+    padding-top: 20px;
+  }
+  .section-padding-bottom-lg {
+    padding-bottom: 100px;
+  }
+  .section-padding-bottom-md {
+    padding-bottom: 50px;
+  }
+  .section-padding-bottom-sm {
+    padding-bottom: 20px;
+  }
+  /*----------------*/
+
+  /*own styles*/
+  .heading-container {
+    position: relative;
+    height: 70vh;
+    background: #aaa;
+    overflow: hidden;
+    padding-top: 100px;
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: auto;
+      z-index: 1;
+    }
+    .container {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      z-index: 8;
+      h1 {
+        color: $color-main-orange;
+        z-index: 9;
+        margin: 0;
+        &.inverted {
+          color: #fff;
+        }
+      }
+    }
+  }
+  .blog-card {
+    //border-left: 1px solid #aaa;
+  }
+
+  /*site structure*/
+  .main-navigation {
+    z-index: 10;
+    background: none;
+    background-color: none;
+    position: absolute;
+    width: 100vw;
+    min-height: 100px;
+
+    ul {
+      padding-left: 0;
+    }
+    li {
+      font-size: 1rem;
+      list-style: none;
+      border-left: none;
+      padding-left: 10px;
+      margin: 0;
+    }
+
+    .logotype {
+      max-width: 350px;
+      width: 350px;
+      margin: 5px 0 0 0;
+    }
+
+    .nav-link{
+      &:hover {
+        color: #ddd;
+      }
+      &:focus {
+        color: #555;
+      }
+      color: #eee;
+    }
+  }
+  .pageContent {
+    overflow: visible;
+    padding-top: 0;
+  }
+  .page-content {
+    padding-top: 200px;
+  }
+  .container img {
+    max-width: 100%;
+  }
+  .jumbotron {
+    height: 90vh;
+    margin-top: -200px;
+    background: #585858;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    h1 {
+      color: white;
+      border-left: 4px solid #fa8f2d;
+      padding-left: $padding-md;
+    }
+  }
+  .footer-main {
+    width: 100vw;
+    background: $color-main-blue;
+    padding: 50px;
+    h4 {
+      color: #fff;
+      font-size: 18px;
+    }
+  }
+
+  .content-rich-page {
+
+    img {
+      max-width: 100%;
+    }
+
+    h1 {
+      margin-top: 50px;
+    }
+    h2,h3,h4 {
+      margin-top: 40px;
+    }
+    &.about {
+      padding-top: 50px;
+      div {
+        vertical-align: top;
+      }
+      img {
+        width: 100%;
+        margin-top: 40px;
+      }
+      p {
+        margin-bottom: 30px;
+        text-align: justify;
+      }
+    }
+    &.services {
+      padding-top: 50px;
+      p {
+        margin-bottom: 20px;
+      }
+    }
+  }
+
 }
 
 .navbar-nav {
@@ -105,5 +315,72 @@
 
   & > * {
     padding-left: 10px;
+  }
+}
+@include media-breakpoint-down(lg) {
+  .App {
+    .jumbotron {
+      h1 {
+        width: 60%;
+      }
+    }
+  }
+}
+@include media-breakpoint-down(md) {
+  .App {
+    .jumbotron {
+      height: 80vh;
+      h1 {
+        width: 80%;
+      }
+    }
+    .heading-container {
+      height: 50vh;
+
+    }
+    .main-navigation {
+      .logotype {
+        max-width: 200px;
+      }
+    }
+  }
+}
+@include media-breakpoint-down(sm) {
+  .App {
+    .heading-container {
+      height: 40vh;
+      h1 {
+        font-size: 2.3rem;
+      }
+    }
+  }
+}
+@media (max-aspect-ratio: 2/3) {
+  .App {
+    .heading-container {
+      img {
+        height: 100%;
+        width: auto;
+        max-width: unset;
+      }
+    }
+  }
+}
+@include media-breakpoint-up(md) {
+  .App {
+    .heading-container {
+      img {
+        top: -100px;
+      }
+    }
+  }
+}
+@include media-breakpoint-up(xl) {
+  .App {
+    .heading-container {
+      img {
+        top: -200px;
+      }
+    }
   }
 }
