--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -364,14 +364,29 @@ $padding-lg: 20px;
 
     blockquote {
       padding-left: 20px;
-      margin-left: 20px;
+      margin: 50px 0 40px 20px;
       border-left: 1px solid #bbb;
       font-style: italic;
       font-size: 1.1em;
     }
+    ul, ol {
+      margin-left: 45px;
+      padding: 30px 0 10px 0;
+    }
+    li {
+      font-size: 18px;
+      border: none;
+      list-style: initial;
+    }
+    p {
+      margin-bottom: 25px;
+      font-size: 18px;
+    }
     h1, h2 {
       border: none;
       padding-left: none;
+      padding-bottom: 10px;
+      margin-top: 35px;
     }
     h1 {
       padding-left: 1px;
