fix svgs not displaying correctly in edge

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -322,7 +322,8 @@ $padding-lg: 20px;
       border-color: #eee;
       border-width: 1px;
       img {
-        min-width: 20%;
+        width: 20%;
+        margin: auto;
       }
     }
     .main-button {
